# trainer

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  OPERATION.md  README.md  conanfile.txt  data.json  package-lock.json  package.json  semantic.json  test.json
docs/images/: architecture.xml
src/: main.cpp  main.cpp.bck
src/ACL/CAN/: CANSocket.cpp  CANSocket.hpp  DummyCANSocket.cpp  DummyCANSocket.hpp  Message.cpp  Message.hpp  MessageFactory.cpp  MessageFactory.hpp  MessageInterface.hpp  SocketInterface.hpp
src/ACL/I2C/: Device.cpp  Device.hpp  IOException.cpp  IOException.hpp
src/ACL/Pigpio/: InitFailureException.cpp  InitFailureException.hpp  LogicException.cpp  LogicException.hpp  PigpioException.cpp  PigpioException.hpp  Proxy.cpp  Proxy.hpp  ProxyInterface.hpp
src/ACL/Pigpio/I2C/: Device.cpp  Device.hpp  DeviceInterface.hpp
src/ACL/TCP/: BoostTCPConnection.cpp  BoostTCPConnection.hpp  BoostTCPSocket.cpp  BoostTCPSocket.hpp  BrokenPipeException.hpp  TCPConnectionInterface.hpp  TCPSocketInterface.hpp
src/API/Controller/: ConfigurationController.cpp  ConfigurationController.hpp  HeartbeatResponse.hpp  OperationsController.cpp  OperationsController.hpp
src/API/Websocket/: Request.cpp  Request.hpp  RequestRouter.cpp  RequestRouter.hpp  Response.cpp  Response.hpp  ResponseCastInterface.hpp  RouterInterface.hpp  Server.cpp  Server.hpp  ServerThread.cpp  ServerThread.hpp
src/Configuration/: ActiveConfigurationResponse.hpp  AvailableUserSettingsResponse.hpp  ConfigRepository.cpp  ConfigRepository.hpp  SystemSettings.cpp  SystemSettings.hpp  UserSettings.cpp  UserSettings.hpp
src/Networking/: BusResponse.cpp  BusResponse.hpp  CANThread.cpp  CANThread.hpp  ControlStatus.cpp  ControlStatus.hpp  EngineStatus.cpp  EngineStatus.hpp  MoviDriveService.cpp  MoviDriveService.hpp  Response.cpp  Response.hpp
src/Processing/: BrakeInputThread.cpp  BrakeInputThread.hpp  ProcessingService.cpp  ProcessingService.hpp  ProcessingStatus.cpp  ProcessingStatus.hpp  ProcessingThread.cpp  ProcessingThread.hpp  Range.cpp  Range.hpp  RotationDirection.hpp
src/Processing/Acceleration/: AccelerationService.cpp  AccelerationService.hpp  AccelerationStage.cpp  AccelerationStage.hpp
src/Processing/BrakeInput/: BrakeInputMessage.cpp  BrakeInputMessage.hpp  BrakeInputReceiveThread.cpp  BrakeInputReceiveThread.hpp  BrakeInputThread.hpp  BrakeInputTransmissionThread.cpp  BrakeInputTransmissionThread.hpp
src/Processing/BrakeInput/CAN/: WayconBrakeInputThread.cpp  WayconBrakeInputThread.hpp
src/Processing/BrakeInput/IP/: BrakeInputMessage.cpp  BrakeInputMessage.hpp  BrakeInputRXThread.cpp  BrakeInputRXThread.hpp  BrakeInputTXThread.cpp  BrakeInputTXThread.hpp
src/Processing/Mode/: OperationMode.hpp  RegularSpiralMode.cpp  RegularSpiralMode.hpp  StaticMaxSpeedMode.cpp  StaticMaxSpeedMode.hpp
src/Sensors/: ADCSensorInterface.hpp  ADS1115.cpp  ADS1115.hpp  InvalidArgumentException.cpp  InvalidArgumentException.hpp
src/Utils/: Algorithms.cpp  Algorithms.hpp  SystemRepository.hpp  ThreadSynchronizer.hpp
src/Utils/Assertions/: Assertion.cpp  Assertion.hpp  AssertionFailedException.cpp  AssertionFailedException.hpp
src/Utils/Exceptions/: InvalidArgumentException.cpp  InvalidArgumentException.hpp  RuntimeException.cpp  RuntimeException.hpp
src/Utils/Logging/: LoggerInterface.hpp  NullLogger.hpp  StandardLogger.cpp  StandardLogger.hpp
tests/: main.cpp
tests/ACL/CAN/: MessageFactoryTest.cpp  MessageTest.cpp
tests/ACL/Pigpio/I2C/: DeviceTest.cpp
tests/API/Controller/: ConfigurationControllerTest.cpp  OperationsControllerTest.cpp
tests/API/Websocket/: RequestRouterTest.cpp  ServerThreadTest.cpp
tests/Configuration/: ConfigRepositoryIntegrationTest.cpp
tests/General/: AlgorithmsTest.cpp
tests/Networking/: CANThreadTest.cpp  ControlStatusTest.cpp  MoviDriveServiceTest.cpp  ResponseTest.cpp
tests/Processing/: BrakeInputThreadTest.cpp  ProcessingServiceTest.cpp  ProcessingStatusTest.cpp  ProcessingThreadTest.cpp  RangeTest.cpp
tests/Processing/Acceleration/: AccelerationServiceTest.cpp
tests/Processing/BrakeInput/: BrakeInputMessageTest.cpp  BrakeInputThreadReceiveTest.cpp  BrakeInputThreadTest.cpp  BrakeInputTransmissionThreadTest.cpp
tests/Processing/BrakeInput/CAN/: WayconBrakeInputThreadTest.cpp
tests/Processing/BrakeInput/IP/: BrakeInputMessageTest.cpp  BrakeInputRXThreadTest.cpp  BrakeInputTXThreadTest.cpp
tests/Processing/Mode/: RegularSpiralModeTest.cpp  StaticMaxSpeedModeTest.cpp
tests/Sensors/: ADS1115Test.cpp
web/: index.html  manifest.json
web/css/: style.css
web/js/lib/: app.js
web/js/lib/Configuration/: SystemSettings.js  UserSettings.js
web/js/lib/Networking/: Message.js  Websocket.js
web/js/lib/Operation/: BrakeInput.js  EngineStatus.js  SystemStatus.js
web/js/lib/Pages/: AbstractPage.js  NavigationController.js  OperationsPage.js  SettingsPage.js
web/js/lib/Pages/Components/: BarChart.js  BrakeInputChart.js  GaugeChart.js  SpeedChart.js
web/js/lib/Utils/: RotationMath.js  TemplateRepository.js
web/templates/: accelerationStagesTable.html  connectionDimmer.html  forceStatistics.html  operationsPage.html  rawBrakeStatistics.html  settingsPage.html  statusLabels.html
